netpol/netpol-fairytale.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-deny-ingress-egress 
  namespace: fairytale
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-egress
  namespace: fairytale
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          app: gateway
    - podSelector:
        matchLabels: {}
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - namespaceSelector:
        matchLabels:
          app: monitoring-net
    - podSelector:
        matchLabels: {}
    ports:
    - protocol: TCP
      port: 9090
    - protocol: TCP
      port: 4318
    - protocol: TCP
      port: 4317

  # 디비로 나가는 거.
  - to:
    - ipBlock:
        cidr: 192.168.56.0/24
    ports:
    - protocol: TCP
      port: 3306

  # 외부 api 호출. polly, bedrock
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-ingress-gateway
  namespace: fairytale
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: gateway
    - podSelector:
        matchLabels: {}
