netpol/netpol-front.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-deny-ingress-egress 
  namespace: front-net
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-egress-backend-monitoring
  namespace: front-net
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          app: back-net
    - podSelector:
        matchLabels: {}
  - to:
    - namespaceSelector:
        matchLabels:
          app: monitoring-net
    - podSelector:
        matchLabels: {}
    ports:
    - protocol: TCP
      port: 9090
    - protocol: TCP
      port: 4318
    - protocol: TCP
      port: 4317

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-ingress-internet
  namespace: front-net
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
    ports:
    - protocol: TCP
      port: 80
