netpol/netpol-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-deny-ingress-egress 
  namespace: gateway
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-egress
  namespace: gateway
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          app: front-net
    - podSelector:
        matchLabels: {}
    ports:
    - protocol: TCP
      port: 3000
  - to:
    - namespaceSelector:
        matchLabels:
          app: monitoring-net
    - podSelector:
        matchLabels: {}
    ports:
    - protocol: TCP
      port: 9090
    - protocol: TCP
      port: 4318
    - protocol: TCP
      port: 4317

  # fairytale
    - to:
    - namespaceSelector:
        matchLabels:
          app: fairytale
    - podSelector:
        matchLabels: {}
    ports:
    - protocol: TCP
      port: 8082

  # member
    - to:
    - namespaceSelector:
        matchLabels:
          app: member
    - podSelector:
        matchLabels: {}
    ports:
    - protocol: TCP
      port: 8081


---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-ingress-frontend
  namespace: gateway
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: front-net
    - podSelector:
        matchLabels: {}
