netpol/netpol-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-allow-ingress
  namespace: monitoring-ns
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: front-ns
    - podSelector:
        matchLabels: {}

  - from:
    - namespaceSelector:
        matchLabels:
          app: back-ns
    - podSelector:
        matchLabels: {}
